Checkstyle: switch to Google Java Style (#8)